# memory-disaggregation-ThymesisFlow-Arrow

./: README.md
arrow/cpp/: .gitignore  CMakeLists.txt
arrow/cpp/build-support/: arrow_bundled_dependencies.ar  arrow_bundled_dependencies.ar.in  cmake_summary.json
arrow/cpp/build-support/googletest_ep-prefix/src/googletest_ep-stamp/: download-googletest_ep.cmake  extract-googletest_ep.cmake  googletest_ep-build-DEBUG.cmake  googletest_ep-configure-DEBUG.cmake  googletest_ep-download-DEBUG-impl.cmake  googletest_ep-download-DEBUG.cmake  googletest_ep-install-DEBUG.cmake  googletest_ep-urlinfo.txt
arrow/cpp/build-support/googletest_ep-prefix/tmp/: googletest_ep-cfgcmd.txt
arrow/cpp/build-support/re2_ep-prefix/src/re2_ep-stamp/: download-re2_ep.cmake  extract-re2_ep.cmake  re2_ep-build-DEBUG.cmake  re2_ep-configure-DEBUG.cmake  re2_ep-download-DEBUG-impl.cmake  re2_ep-download-DEBUG.cmake  re2_ep-install-DEBUG.cmake  re2_ep-urlinfo.txt
arrow/cpp/build-support/re2_ep-prefix/tmp/: re2_ep-cfgcmd.txt
arrow/cpp/build-support/src/arrow/: ArrowConfig.cmake  ArrowConfigVersion.cmake  ArrowOptions.cmake  arrow-testing.pc  arrow.pc
arrow/cpp/build-support/src/arrow/compute/: arrow-compute.pc
arrow/cpp/build-support/src/arrow/json/: arrow-json.pc
arrow/cpp/build-support/src/arrow/util/: config.h
arrow/cpp/build-support/src/parquet/: ParquetConfig.cmake  parquet.pc  parquet_version.h
arrow/cpp/build-support/src/xsimd_ep-stamp/: download-xsimd_ep.cmake  extract-xsimd_ep.cmake  xsimd_ep-build-DEBUG.cmake  xsimd_ep-configure-DEBUG.cmake  xsimd_ep-download-DEBUG-impl.cmake  xsimd_ep-download-DEBUG.cmake  xsimd_ep-install-DEBUG.cmake  xsimd_ep-urlinfo.txt
arrow/cpp/build-support/thrift_ep-prefix/src/thrift_ep-stamp/: download-thrift_ep.cmake  extract-thrift_ep.cmake  thrift_ep-build-DEBUG.cmake  thrift_ep-configure-DEBUG.cmake  thrift_ep-download-DEBUG-impl.cmake  thrift_ep-download-DEBUG.cmake  thrift_ep-install-DEBUG.cmake  thrift_ep-urlinfo.txt
arrow/cpp/build-support/thrift_ep-prefix/tmp/: thrift_ep-cfgcmd.txt
arrow/cpp/build-support/tmp/: xsimd_ep-cfgcmd.txt
arrow/cpp/build-support/utf8proc_ep-prefix/src/utf8proc_ep-stamp/: download-utf8proc_ep.cmake  extract-utf8proc_ep.cmake  utf8proc_ep-build-DEBUG.cmake  utf8proc_ep-configure-DEBUG.cmake  utf8proc_ep-download-DEBUG-impl.cmake  utf8proc_ep-download-DEBUG.cmake  utf8proc_ep-install-DEBUG.cmake  utf8proc_ep-urlinfo.txt
arrow/cpp/build-support/utf8proc_ep-prefix/tmp/: utf8proc_ep-cfgcmd.txt
arrow/cpp/cmake_modules/: DefineOptions.cmake  ThirdpartyToolchain.cmake
arrow/cpp/src/arrow/: CMakeLists.txt  api.h  buffer.h  linked_list.h  memory_pool.cc  memory_pool.h  memory_pool_internal.h  memory_pool_thymesismalloc.cc  tf_orchestrate.cc  tf_orchestrate.h  tf_orchestrate.proto  tf_serializer.cc  tf_serializer.h  tmalloc.c  tmalloc.h  tperf.cc  tperf.h
arrow/cpp/src/arrow/io/: file.cc
arrow/cpp/src/arrow/tf/: TFOrchestrate.cmake.in  TFOrchestrateConfig.cmake.in  tf-orchestrate.pc.in
arrow/cpp/src/arrow/util/: config.h.cmake
arrow/dev/archery/archery/utils/: source.py
examples/1_component_benchmark/: CMakeLists.txt  client0.cpp  client1.cpp  common.h
examples/1_component_benchmark/TEST_FINALISED/: bm_access_serial_local.csv  bm_access_serial_remote.csv  bm_access_strided_read_local.csv  bm_access_strided_read_remote_1.csv  bm_access_strided_read_remote_2.csv  bm_access_strided_read_remote_3.csv  bm_access_strided_write_local.csv  bm_access_strided_write_remote.csv  bm_datatypes_local.csv  bm_datatypes_remote.csv  bm_deserializer.csv  bm_flush_empty_local.csv  bm_flush_empty_remote.csv  bm_flush_full_local.csv  bm_flush_full_remote.csv  bm_malloc_local.csv  bm_malloc_remote.csv  bm_serializer.csv  bm_transfer_full.csv  bm_transfer_metadata.csv  ping.csv  process_data.ipynb
examples/apache-arrow-basics/: CMakeLists.txt  Makefile  main  main.cc
examples/arrow-io/: CMakeLists.txt  Makefile  main  main.cc  test_in.parquet
examples/arrow-use-compiled/: CMakeLists.txt  Makefile  main.cc
examples/arrow_non_system/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  client0.cpp  client1.cpp  client2.cpp  cmake_install.cmake  common.h
examples/arrow_non_system/include/: absl
examples/arrow_non_system/include/arrow/: arrow
examples/flight/: .gitignore  CMakeLists.txt  CMakeLists.txt_old2  main.cc
examples/full_transfer_test/: CMakeLists.txt  client0.cpp  client1.cpp  common.h
examples/grpc-standalone/: .gitignore  CMakeLists.txt  client.cc  server.cc
examples/grpc-standalone/protos/: arrow_tf.proto
examples/md_test_2node/: CMakeCache.txt  Makefile  client0.cpp  client1.cpp  cmake_install.cmake  common.h
examples/md_test_2node/include/: arrow_generated  grpc  protobuf
examples/md_test_2node/include/arrow/: arrow
examples/md_test_2node/lib/: debug
examples/md_test_2node__MD_FS_compare/: CMakeCache.txt  CMakeLists.txt  Full.csv  MD.csv  Makefile  client0.cpp  client1.cpp  cmake_install.cmake  common.h
examples/md_test_2node_tf/: client0.cpp  client1.cpp
examples/md_test_2node_tf_throughput/: client0.cpp  client1.cpp  common.h
examples/network_graph/: client0.cpp  client1.cpp  common.h
examples/template/: CMakeLists.txt  main.cc
examples/tf_test/: CMakeLists.txt  a.out  client.cc  server.cc
examples/tf_test/include/: absl  grpc  protobuf
examples/tf_test/include/arrow/: arrow
examples/tf_test/include/arrow_generated/: arrow
examples/tf_test/lib/: debug
examples/write_local/: CMakeLists.txt  client0.cpp
examples/write_remote/: CMakeLists.txt  client0.cpp  client1.cpp
